--- a/.github/workflows/test_suite.yml
+++ b/.github/workflows/test_suite.yml
@@ -82,7 +82,7 @@ jobs:
           run: |
             docker run --rm -v ${{ github.workspace }}:/ws:rw --workdir=/ws \
               arm64v8/ubuntu:20.04 \
-              bash -exc 'apt-get update && apt-get -y install python3 python3-pip python3-venv curl git && \
+              bash -exc 'apt-get update && apt-get -y install python3 python3-pip python3-venv curl git wget && \
               ln -fs /usr/share/zoneinfo/America/New_York /etc/localtime && export DEBIAN_FRONTEND=noninteractive && apt-get install -y tzdata && dpkg-reconfigure --frontend noninteractive tzdata && \
               python3 -m pip install virtualenv && python3 -m venv py38-venv && \
               source py38-venv/bin/activate && \
@@ -97,6 +97,11 @@ jobs:
               python3.8 -m pip install python-dotenv && \
               python3.8 -m pip install -e .[test] && \
               python3.8 -m pip install ".[test, optional, doc]" && \
+              wget http://mirror.archlinuxarm.org/aarch64/extra/imagemagick-7.1.0.25-1-aarch64.pkg.tar.xz && \
+              tar -xvf imagemagick-7.1.0.25-1-aarch64.pkg.tar.xz && \
+              cd imagemagick-7.1.0.25-1-aarch64 && \
+              python3 setup.pu install && \
+              cd .. && \
               apt install ffmpeg -y && \
               apt install imagemagick -y && \
               python3.8 -m pytest --doctest-glob "moviepy/**/**.py" --cov moviepy --cov-report term-missing && \
